<resources>
    <string name="app_name">DaouData</string>

    <!-- Main Menu :: 1. login-->
    <string name="str_menu_login_not_yet">payfun에 로그인 해주세요</string>

    <!--    common  -->
    <string name="fragment_section_format">Fragment Page: %1$d</string>

    <string name="str_creadit_installment">할부</string>
    <string name="str_creadit_num_of_month">개월</string>
    <string name="str_creadit_apply_membership">회원적용</string>
    <string name="str_creadit_apply_cupon">쿠폰적용</string>
    <string name="str_signpad_title">사인해주세요</string>
    <string name="str_program_title">PADD00678</string>
    <string name="str_ktc_hw_certification_no">DAP12PAYP0001000</string>
    <string name="str_input_amount">결제금액</string>

    <!--    Bluetooth Message   -->
    <string name="bluetooth_connected">블루투스 장비가 연결되었습니다.</string>
    <string name="bluetooth_disconnected">블루투스 장비 연결이 끊겼습니다.</string>
    <string name="bluetooth_not_configured">MINIBT 장비 연결이 안되어 있습니다. \n 프로필 > 일반설정 > MINI BT 설정을 해주세요.</string>
    <string name="msg_processing">처리중</string>
    <string name="bluetooth_2_scan_timeout">블루투스 스캔 타임아웃</string>
    <string name="bluetooth_2_scan_stopped">블루투스 장비 스캔 중지</string>
    <string name="bluetooth_2_disconnected">블루투스 장비 연결 끊김</string>
    <string name="bluetooth_2_connected">블루투스 장비 연결됨</string>
    <string name="bluetooth_2_detected">블루투스 장비 검색됨</string>


    <string-array name="list_month">
        <item>일시불</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>24</item>
        <item>36</item>
    </string-array>
    <string name="receipt_button_cancel">종료</string>
    <string name="receipt_button_ok">인쇄</string>
    <string name="print_button_cancel">취소</string>
    <string name="print_button_ok">완료</string>

    <string name="EachDay">일별</string>
    <string name="EachMonth">월별</string>
    <string name="EachQuarter">분기별</string>
    <string name="defaultContentDescription">"imageButton or imageView"</string>

    <string name="str_dialog_printout_select_mode">영수증 출력 모드를 선택해주세요</string>
    <string name="str_dialog_printout_mode_email">EMAIL</string>
    <string name="str_dialog_printout_mode_sms">SMS</string>
    <string name="str_dialog_printout_mode_printer">PRINTER</string>
    <string name="str_dialog_printout_mode_email_hint">email주소를 입력해주세요</string>
    <string name="str_dialog_printout_mode_sms_hint">전화번호를 입력해주세요</string>
    <string name="str_cancel_cash_input_or_read_card">카드를 읽히거나 정보를 입력하세요</string>
    <string name="str_payfun_copy_right">copyrigth @2016 PayFun.kr All right reserved</string>
    <string name="str_called_by_payfun_test_id">페이펀 테스트 호출ID를 사용하였습니다.\n정식 VendorID를 사용하여 주세요</string>
    <string name="str_called_by_invalid_vendor_id">등록되지 않은 VendorID로 앱을 호출하였습니다.</string>

</resources>
