<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:gravity="center"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    >
    <Button
        android:id="@+id/bt_history_each_day"
        android:layout_width="0dp"
        android:layout_weight="30"
        android:layout_height="match_parent"
        android:text="@string/EachDay"
        android:background="@drawable/button_history_title_selector"
        />
    <Space
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/bt_history_each_month"
        android:layout_width="0dp"
        android:layout_weight="30"
        android:layout_height="match_parent"
        android:text="@string/EachMonth"
        android:background="@drawable/button_history_title_selector"
        />
    <Space
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/bt_history_each_quarter"
        android:layout_width="0dp"
        android:layout_weight="30"
        android:layout_height="match_parent"
        android:text="@string/EachQuarter"
        android:background="@drawable/button_history_title_selector"
        />
</LinearLayout>