<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:weightSum="100"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/str_dialog_printout_select_mode"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/large_text_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="100"
        >
        <Space
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/btn_dialog_print_out_mode_email"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:background="@drawable/background_button_transparent_apply_select"
            android:text="@string/str_dialog_printout_mode_email"
            android:textStyle="bold"
            />
        <Space
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/btn_dialog_print_out_mode_sms"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:background="@drawable/background_button_transparent_apply_select"
            android:text="@string/str_dialog_printout_mode_sms"
            android:textStyle="bold"
            />
        <Space
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/btn_dialog_print_out_mode_printer"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:background="@drawable/background_button_transparent_apply_select"
            android:text="@string/str_dialog_printout_mode_printer"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dialog_print_out_mode_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:text="@string/str_dialog_printout_mode_email"
            android:gravity="center_vertical"
            />
        <Space
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            />
        <EditText
            android:id="@+id/edt_dialog_print_out_mode_email"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="match_parent"
            android:hint="@string/str_dialog_printout_mode_email_hint"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dialog_print_out_mode_sms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:text="@string/str_dialog_printout_mode_sms"
            android:gravity="center_vertical"
            />
        <Space
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            />
        <EditText
            android:id="@+id/edt_dialog_print_out_mode_sms"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="match_parent"
            android:hint="@string/str_dialog_printout_mode_sms_hint"
            android:inputType="phone"
            />
    </LinearLayout>

    <include
        android:id="@+id/layout_dialog_print_out_foot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        layout="@layout/item_yes_no_buttons"
        />
</android.support.v7.widget.LinearLayoutCompat>